@startuml

' TODO: separate Entity into its own diagram

set namespaceSeparator none
hide empty members

class Tracer <<Singleton>> {
    + Pigment[][] render()
    - Pigment trace()
}

hide Tracer fields

class Scene {
    + void add(Entity)
}

hide Scene fields

class Settings {
    ...
    + void addLight(Light)
}

class Light {
    + Vector3 origin
    + double falloff
    + double ambient
    + Pigment color
}

hide Light methods

abstract class Entity {
    + {abstract} Hit intersect(Ray r)
}

hide Entity attributes

class Material {
    + Pigment color
    + double reflectivity
    + double transparency
    + double refractIndex
    + double diffuse
    + double specular
    + double shininess
}

hide Material methods

class Camera {
    - Vector3 position
    - double roll
    - Matrix4 viewMatrix
}

hide Camera methods


abstract class CSG
class Box
abstract class "..."

class Union
class Difference
class Intersection

Entity "1" -left- "*" Material

Scene "1" o-left- "*" Light
Scene "1" -- "1" Camera
Scene "1" *-- "*" Entity

CSG "1" *-up- "2, n "  Entity

Entity <|-- CSG
Entity <|-- Box
Entity <|-- "..."


Scene "1" -right- "1" Settings
Tracer -- Scene

CSG <|-- Union
CSG <|-- Difference
CSG <|-- Intersection

@enduml